tests/snapshots/ui__ui_test_ok_format_flag-2.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch compress input output2 --format .tar.gz\", dir)"
---
[INFO] Compressing "input"
[INFO] Output file size: [SIZE]
[INFO] Successfully compressed to "output2"
