tests/snapshots/ui__ui_test_ok_format_flag.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch compress input output1 --format tar.gz\", dir)"
---
[INFO] Compressing "input"
[INFO] Output file size: [SIZE]
[INFO] Successfully compressed to "output1"
