tests/snapshots/ui__ui_test_ok_format_flag_with_rar-1.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch compress input output1 --format tar.gz\", dir)"
---
[INFO] Compressing 'input'
[INFO] Successfully compressed 'output1'
