tests/snapshots/ui__ui_test_ok_format_flag_without_rar-2.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch compress input output2 --format .tar.gz\", dir)"
---
[INFO] Compressing 'input'
[INFO] Successfully compressed 'output2'
