tests/snapshots/ui__ui_test_usage_help_flag.snap
---
source: tests/ui.rs
expression: "output_to_string(ouch!(\"--help\"))"
---
A command-line utility for easily compressing and decompressing files and directories.

Supported formats: tar, zip, gz, 7z, xz, lzma, lzip, bz/bz2, bz3, lz4, sz (Snappy), zst, rar and br.

Repository: https://github.com/ouch-org/ouch

Usage: [OUCH_BIN] [OPTIONS] <COMMAND>

Commands:
  compress    Compress one or more files into one output file [alias: c]
  decompress  Decompresses one or more files, optionally into another folder [alias: d]
  list        List contents of an archive [aliases: l, ls]
  help        Print this message or the help of the given subcommand(s)

Options:
  -y, --yes
          Skip [Y/n] questions, default to yes

  -n, --no
          Skip [Y/n] questions, default to no

      --rename
          On conflict, rename the output instead of asking what to do

  -A, --accessible
          Activate accessibility mode, reducing visual noise
          
          [env: ACCESSIBLE=]

  -q, --quiet
          Silence output

  -f, --format <FORMAT>
          Specify the format of the archive

  -p, --password <PASSWORD>
          Decompress or list with password
          
          [env: OUCH_PASSWORD=]

  -c, --threads <THREADS>
          Concurrent working threads

      --no-sandbox
          Disable the process sandbox

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
